# rust-camel

./: .dockerignore  .gitignore  .phase-c-inventory.md  AGENTS.md  CHANGELOG.md  CONTEXT-MAP.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  README.md  SECURITY.md  TODO.md  borrar.md  code-arch.md  coverage.toml  flake.nix  gap.md  opencode.json  prompt.md  publish-crates.sh  test_label_names.rs  test_metrics_server.rs
crates/camel-agent/: Cargo.toml
crates/camel-agent/src/: lib.rs  snapshot.rs  steward.rs  types.rs
crates/camel-ai/: Cargo.toml
crates/camel-ai/src/: lib.rs  traits.rs  types.rs  uri.rs
crates/camel-api/: CONTEXT.md  Cargo.toml  README.md
crates/camel-api/benches/: exchange.rs  from_body.rs  message.rs
crates/camel-api/src/: aggregator.rs  backoff.rs  body.rs  body_converter.rs  circuit_breaker.rs  claim_check.rs  component_metadata.rs  data_format.rs  datasource.rs  declarative.rs  delayer.rs  dynamic_router.rs  endpoint_pipeline.rs  error.rs  error_handler.rs  exchange.rs  exchange_lookup.rs  filter.rs  from_body.rs  function.rs  health.rs  idempotent.rs  lib.rs  lifecycle.rs  load_balancer.rs  loop_eip.rs  message.rs  metrics.rs  metrics_tests.rs  multicast.rs  outcome_pipeline.rs  outcome_segment.rs  pipeline_outcome.rs  platform.rs  processor.rs  producer.rs  recipient_list.rs  resequencer.rs  route_controller.rs  routing_slip.rs  (+12 more)
crates/camel-api/tests/: declarative_types_test.rs
crates/camel-bean/: Cargo.toml  README.md
crates/camel-bean-macros/: Cargo.toml  README.md
crates/camel-bean-macros/src/: handler.rs  lib.rs
crates/camel-bean/src/: error.rs  lib.rs  processor.rs  registry.rs
crates/camel-bean/tests/: bean_macro_test.rs  handler_parsing_test.rs
crates/camel-bench/: Cargo.toml  README.md
crates/camel-bench/benches/: body_coercion.rs  exchange_flow.rs  forced_experiment.rs  pipeline.rs  throughput.rs
crates/camel-bench/src/: lib.rs
crates/camel-builder/: Cargo.toml  README.md
crates/camel-builder/src/: do_try.rs  lib.rs
crates/camel-builder/tests/: canonical_spec_test.rs  log_eip_test.rs
crates/camel-cli/: CONTEXT.md  Cargo.toml  README.md
crates/camel-cli/src/: lib.rs  main.rs
crates/camel-cli/tests/: journal_inspect_test.rs  languages_test.rs  new_test.rs  surrealdb_scheme.rs
crates/camel-component/: Cargo.toml  README.md
crates/camel-component/src/: consumer.rs  endpoint.rs  lib.rs  producer.rs
crates/camel-config/: Cargo.toml  README.md
crates/camel-config/src/: config.rs  context_ext.rs  discovery.rs  filter.rs  include.rs  json.rs  lib.rs  properties.rs  wasm_limits.rs  yaml.rs
crates/camel-config/tests/: config_test.rs  context_config_test.rs  include.rs  subscriber_test.rs  supervision_test.rs
crates/camel-core/: CONTEXT.md  Cargo.toml  README.md
crates/camel-core/benches/: context.rs  lifecycle.rs  lock_contention.rs  pipeline_throughput.rs  swap_pipeline_latency.rs  tracing_overhead.rs
crates/camel-core/src/: component_metadata_catalog.rs  config.rs  context.rs  context_builder.rs  context_tests.rs  datasource.rs  health_registry.rs  language_registry.rs  lib.rs  registry.rs  reload.rs  reload_watcher.rs  route.rs  route_controller.rs  startup_validation.rs  supervising_route_controller.rs  template.rs  tracer.rs
crates/camel-core/tests/: allocation_count.rs  arc_snapshot_concurrency.rs  bean_integration_test.rs  continued_e2e.rs  datasource_catalog_test.rs  disposition_metrics.rs  exchange_uow_test.rs  exchange_uow_yaml_test.rs  hexagonal_architecture_boundaries_test.rs  hot_reload.rs  hot_reload_integration.rs  metrics_tests.rs  runtime_commands_test.rs  runtime_consistency_test.rs  runtime_durable_boundary_test.rs  runtime_fault_injection_test.rs  runtime_idempotency_test.rs  runtime_journal_test.rs  runtime_queries_test.rs  runtime_replay_assessment_test.rs  runtime_uow_test.rs  tls_reload_test.rs
crates/camel-dsl/: CONTEXT.md  Cargo.toml  README.md
crates/camel-dsl/benches/: route_parsing.rs
crates/camel-dsl/src/: canonical.rs  compile.rs  contract.rs  discovery.rs  env_interpolation.rs  input_format.rs  json.rs  lib.rs  model.rs  openapi.rs  parity_tests.rs  rest.rs  route_ast.rs  util.rs  yaml.rs  yaml_ast.rs
crates/camel-dsl/tests/: advanced_json_yaml_parity.rs  claim_check_dsl_tests.rs  convert_body_integration.rs  declarative_compile_test.rs  declarative_contract_test.rs  discovery_test.rs  enrich_dsl_tests.rs  format_aware_errors.rs  openapi_integration.rs  rest_schema_e2e.rs  sampling_dsl_tests.rs  schema_validation.rs  security_policy_integration.rs  stream_cache_integration.rs
crates/camel-endpoint/: Cargo.toml  README.md
crates/camel-endpoint-macros/: Cargo.toml  README.md
crates/camel-endpoint-macros/src/: lib.rs  uri_config.rs
crates/camel-endpoint/src/: config.rs  lib.rs  uri.rs
crates/camel-health/: CONTEXT.md  Cargo.toml  README.md
crates/camel-health/src/: lib.rs  server.rs
crates/camel-processor/: CONTEXT.md  Cargo.toml  README.md
crates/camel-processor/benches/: aggregator.rs  choice.rs  circuit_breaker.rs  filter.rs  load_balancer.rs  multicast.rs  splitter.rs
crates/camel-processor/src/: aggregator.rs  ai.rs  choice.rs  circuit_breaker.rs  claim_check.rs  claim_check_tests.rs  content_enricher.rs  convert_body.rs  delayer.rs  do_try.rs  do_try_segment.rs  dynamic_router.rs  dynamic_set_header.rs  dynamic_set_property.rs  endpoint_pipeline.rs  enrichment_strategy.rs  error_handler.rs  filter.rs  idempotent_consumer.rs  json_schema_validate.rs  lib.rs  (+29 more)
crates/camel-support/: Cargo.toml  README.md
crates/camel-test/: Cargo.toml  README.md
crates/camel-util/: Cargo.toml  README.md
crates/camel-wasm-sdk/: Cargo.toml  README.md
crates/camel-wit/: Cargo.toml  README.md
examples/aggregator/: Cargo.toml
examples/ai-ticket-router/: Cargo.toml  README.md  routes.yaml
examples/auto-restart/: Cargo.toml
examples/bean-demo/: Cargo.toml  README.md
examples/circuit-breaker/: Cargo.toml
examples/config-basic/: Camel.toml  Cargo.toml
examples/config-profiles/: Camel.toml  Cargo.toml
examples/container-example/: Cargo.toml
(+1554 files in other folders)
