[workspace]
resolver = "2"
members = [
    "scripts/xtask",
    "crates/camel-*",
    "crates/components/*",
    "crates/languages/*",
    "crates/services/*",
    "crates/platforms/*",
    "crates/dataformats/*",
]
exclude = ["examples/*"]

[workspace.metadata.crane]
name = "rust-camel"

[workspace.package]
version = "0.11.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/kennycallado/rust-camel"
homepage = "https://github.com/kennycallado/rust-camel"
documentation = "https://docs.rs/camel-api"
readme = "README.md"
keywords = ["camel", "integration", "messaging", "routing", "enterprise"]
categories = ["network-programming", "asynchronous", "development-tools"]

[workspace.dependencies]
# IMPORTANT: when bumping [workspace.package].version, update all "=X.Y.Z"
# below to match using: sed -i 's/version = "=OLD"/version = "=NEW"/g' Cargo.toml
# Exact pinning (=) ensures cargo publish verifies against the exact version
# being released, not an older one already on crates.io.
camel-api = { path = "crates/camel-api", version = "=0.11.1" }
camel-bean = { path = "crates/camel-bean", version = "=0.11.1" }
camel-bean-macros = { path = "crates/camel-bean-macros", version = "=0.11.1" }
camel-cli = { path = "crates/camel-cli", version = "=0.11.1" }
camel-core = { path = "crates/camel-core", version = "=0.11.1" }
camel-processor = { path = "crates/camel-processor", version = "=0.11.1" }
camel-health = { path = "crates/camel-health", version = "=0.11.1" }
camel-bridge = { path = "crates/services/camel-bridge", version = "=0.11.1" }
camel-function = { path = "crates/services/camel-function", version = "=0.11.1" }
camel-dsl = { path = "crates/camel-dsl", version = "=0.11.1" }
camel-builder = { path = "crates/camel-builder", version = "=0.11.1" }
camel-component-api = { path = "crates/components/camel-component-api", version = "=0.11.1" }
camel-endpoint = { path = "crates/camel-endpoint", version = "=0.11.1" }
camel-endpoint-macros = { path = "crates/camel-endpoint-macros", version = "=0.11.1" }
camel-test = { path = "crates/camel-test", version = "=0.11.1" }
camel-component-timer = { path = "crates/components/camel-timer", version = "=0.11.1" }
camel-component-log = { path = "crates/components/camel-log", version = "=0.11.1" }
camel-component-file = { path = "crates/components/camel-file", version = "=0.11.1" }
camel-component-direct = { path = "crates/components/camel-direct", version = "=0.11.1" }
camel-component-seda = { path = "crates/components/camel-component-seda", version = "=0.11.1" }
camel-component-mock = { path = "crates/components/camel-mock", version = "=0.11.1" }
camel-component-http = { path = "crates/components/camel-http", version = "=0.11.1" }
camel-component-ws = { path = "crates/components/camel-ws", version = "=0.11.1" }
camel-component-redis = { path = "crates/components/camel-redis", version = "=0.11.1" }
camel-component-kafka = { path = "crates/components/camel-kafka", version = "=0.11.1" }
camel-component-jms = { path = "crates/components/camel-jms", version = "=0.11.1" }
camel-component-sql = { path = "crates/components/camel-sql", version = "=0.11.1" }
camel-component-controlbus = { path = "crates/components/camel-controlbus", version = "=0.11.1" }
camel-component-validator = { path = "crates/components/camel-validator", version = "=0.11.1" }
camel-xslt = { path = "crates/components/camel-xslt", version = "=0.11.1" }
camel-xj = { path = "crates/components/camel-xj", version = "=0.11.1" }
camel-component-cxf = { path = "crates/components/camel-cxf", version = "=0.11.1" }
camel-master = { path = "crates/components/camel-master", version = "=0.11.1" }
camel-component-prometheus = { path = "crates/services/camel-prometheus", version = "=0.11.1" }
camel-component-otel = { path = "crates/services/camel-otel", version = "=0.11.1" }
camel-otel = { path = "crates/services/camel-otel", version = "=0.11.1" }
camel-prometheus = { path = "crates/services/camel-prometheus", version = "=0.11.1" }
camel-component-container = { path = "crates/components/camel-container", version = "=0.11.1" }
camel-language-api = { path = "crates/languages/camel-language-api", version = "=0.11.1" }
camel-language-js = { path = "crates/languages/camel-language-js", version = "=0.11.1" }
camel-language-rhai = { path = "crates/languages/camel-language-rhai", version = "=0.11.1" }
camel-language-simple = { path = "crates/languages/camel-language-simple", version = "=0.11.1" }
camel-language-jsonpath = { path = "crates/languages/camel-language-jsonpath", version = "=0.11.1" }
camel-language-xpath = { path = "crates/languages/camel-language-xpath", version = "=0.11.1" }
camel-config = { path = "crates/camel-config", version = "=0.11.1" }
camel-platform-kubernetes = { path = "crates/platforms/camel-platform-kubernetes", version = "=0.11.1" }
camel-proto-compiler = { path = "crates/services/camel-proto-compiler", version = "=0.11.1" }
camel-dataformat-protobuf = { path = "crates/dataformats/camel-dataformat-protobuf", version = "=0.11.1" }
camel-component-grpc = { path = "crates/components/camel-component-grpc", version = "=0.11.1" }
camel-component-opensearch = { path = "crates/components/camel-opensearch", version = "=0.11.1" }
camel-wit = { path = "crates/camel-wit", version = "=0.11.1" }
camel-component-wasm = { path = "crates/components/camel-component-wasm", version = "=0.11.1" }

tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14" }
prost = { version = "0.14" }
prost-reflect = { version = "0.16", features = ["serde"] }
tonic-build = { version = "0.14" }
tonic-prost-build = { version = "0.14" }
tonic-prost = { version = "0.14" }
protoc-bin-vendored = "3"
tower = { version = "0.5", features = ["util"] }
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
bytes = "1"
futures = "0.3"
tracing = "0.1"
tokio-util = { version = "0.7", features = ["rt", "io"] }
tokio-stream = "0.1"
dashmap = "6"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
kube = { version = "3", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27", features = ["v1_31"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["rustls", "stream"], default-features = false }
sha2 = "0.11"
hex = "0.4"
flate2 = "1"
tar = "0.4"
dirs = "6"
regex = "1"
redb = "4"
axum = { version = "0.8" }
http = "1"
url = "2"
libc = "0.2"
uuid = { version = "1", features = ["v4"] }
rhai = { version = "1", features = ["sync"] }
# Pin to 0.21: Context is !Send + !Sync
boa_engine = { version = "0.21", features = [] }
arc-swap = "1"
config = "0.15"
glob = "0.3"
notify = { version = "8", features = ["macos_fsevent"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["kafka", "postgres", "redis"] }
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
prometheus = "0.14"
quick-xml = "0.40"
base64 = "0.22"
rand = "0.10"
sxd-document = "0.3"
jsonschema = { version = "0.46", default-features = false, features = ["resolve-file"] }
serde_yml = "0.0.12"
toml = "1"
percent-encoding = "2.3"
schemars = "1"
ts-rs = "12"

# WASM dependencies
wit-bindgen = "0.57"
wasmtime = { version = "45", features = ["component-model"] }
wasmtime-wasi = "45"

# OpenTelemetry dependencies
opentelemetry = { version = "0.32", features = ["trace", "logs", "metrics"] }
opentelemetry_sdk = { version = "0.32", features = ["trace", "logs", "metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "http-proto", "trace", "logs", "metrics"] }
opentelemetry-semantic-conventions = { version = "0.32", features = ["semconv_experimental"] }
opentelemetry-appender-tracing = { version = "0.32" }
tracing-opentelemetry = { version = "0.33", features = [] }

[profile.dev]
debug = 1
split-debuginfo = "packed"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

[workspace.lints.rust]
unused_must_use = "warn"
unused_imports  = "warn"
dead_code       = "warn"

[workspace.lints.clippy]
all = "warn"
