[workspace]
resolver = "2"
members = [
    "scripts/xtask",
    "crates/camel-*",
    "crates/components/*",
    "crates/languages/*",
    "crates/services/*",
    "crates/platforms/*",
    "crates/dataformats/*",
    "examples/*",
    # Benchmark fixtures live under benchmarks/ and pull benchmark-specific
    # deps (tracing-subscriber without env-filter, etc). They share the
    # workspace Cargo.lock so transitive dep versions match the production
    # crates they compare against, but are excluded from default-members
    # below so `cargo build` at root does not compile them.
    "benchmarks/scenarios/startup-minimal/rust-camel-lib",
    "benchmarks/scenarios/t2-realistic-eip/rust-camel-lib",
    "benchmarks/scenarios/http-server/rust-camel-lib",
    "benchmarks/scenarios/xslt-bridge/rust-camel-lib",
    "benchmarks/scenarios/xsd-validation-bridge/rust-camel-lib",
    # M2 harness load generator (spec §4.5). Workspace member so it shares
    # the workspace Cargo.lock with the rust-camel fixtures it measures
    # against (dep-version parity); excluded from default-members below.
    "benchmarks/harness/loadgen",
]
default-members = [
    "scripts/xtask",
    "crates/camel-*",
    "crates/components/*",
    "crates/languages/*",
    "crates/services/*",
    "crates/platforms/*",
    "crates/dataformats/*",
    "examples/*",
    # NOTE: benchmarks/* fixtures + harness/loadgen are intentionally NOT
    # default-members — `cargo build` at root skips them. Build them with
    # `cargo build -p <pkg>` or `cargo build --workspace`.
]
exclude = [
    "examples/camel-cli-run",
    "examples/cxf-example",
    "examples/http-static-basic",
    "examples/http-static-spa",
    "examples/security-wasm-policy/guest",
    "examples/wasm-source-webhook",
]

[workspace.metadata.crane]
name = "rust-camel"

[workspace.package]
version = "0.25.1"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
repository = "https://github.com/kennycallado/rust-camel"
homepage = "https://github.com/kennycallado/rust-camel"
documentation = "https://docs.rs/camel-api"
readme = "README.md"
keywords = ["camel", "integration", "messaging", "routing", "enterprise"]
categories = ["network-programming", "asynchronous", "development-tools"]

[workspace.dependencies]
# IMPORTANT: when bumping [workspace.package].version, update all "=X.Y.Z"
# below to match using: sed -i 's/version = "=OLD"/version = "=NEW"/g' Cargo.toml
# Exact pinning (=) ensures cargo publish verifies against the exact version
# being released, not an older one already on crates.io.
camel-api = { path = "crates/camel-api", version = "=0.25.1" }
camel-auth = { path = "crates/services/camel-auth", version = "=0.25.1" }
camel-component-keycloak = { path = "crates/components/camel-component-keycloak", version = "=0.25.1" }
camel-bean = { path = "crates/camel-bean", version = "=0.25.1" }
camel-bean-macros = { path = "crates/camel-bean-macros", version = "=0.25.1" }
camel-cli = { path = "crates/camel-cli", version = "=0.25.1" }
camel-core = { path = "crates/camel-core", version = "=0.25.1" }
camel-processor = { path = "crates/camel-processor", version = "=0.25.1" }
camel-health = { path = "crates/camel-health", version = "=0.25.1" }
camel-bridge = { path = "crates/services/camel-bridge", version = "=0.25.1" }
camel-function = { path = "crates/services/camel-function", version = "=0.25.1" }
camel-dsl = { path = "crates/camel-dsl", version = "=0.25.1" }
camel-builder = { path = "crates/camel-builder", version = "=0.25.1" }
camel-component-api = { path = "crates/components/camel-component-api", version = "=0.25.1" }
camel-endpoint = { path = "crates/camel-endpoint", version = "=0.25.1" }
camel-endpoint-macros = { path = "crates/camel-endpoint-macros", version = "=0.25.1" }
camel-test = { path = "crates/camel-test", version = "=0.25.1" }
camel-component-timer = { path = "crates/components/camel-timer", version = "=0.25.1" }
camel-component-log = { path = "crates/components/camel-log", version = "=0.25.1" }
camel-component-file = { path = "crates/components/camel-file", version = "=0.25.1" }
camel-component-direct = { path = "crates/components/camel-direct", version = "=0.25.1" }
camel-component-seda = { path = "crates/components/camel-component-seda", version = "=0.25.1" }
camel-component-mock = { path = "crates/components/camel-mock", version = "=0.25.1" }
camel-component-http = { path = "crates/components/camel-http", version = "=0.25.1" }
camel-component-ws = { path = "crates/components/camel-ws", version = "=0.25.1" }
camel-component-redis = { path = "crates/components/camel-redis", version = "=0.25.1" }
camel-component-kafka = { path = "crates/components/camel-kafka", version = "=0.25.1" }
camel-component-mqtt = { path = "crates/components/camel-mqtt", version = "=0.25.1" }
camel-component-jms = { path = "crates/components/camel-jms", version = "=0.25.1" }
camel-component-sql = { path = "crates/components/camel-sql", version = "=0.25.1" }
camel-component-controlbus = { path = "crates/components/camel-controlbus", version = "=0.25.1" }
camel-component-validator = { path = "crates/components/camel-validator", version = "=0.25.1" }
camel-xslt = { path = "crates/components/camel-xslt", version = "=0.25.1" }
camel-xj = { path = "crates/components/camel-xj", version = "=0.25.1" }
camel-component-cxf = { path = "crates/components/camel-cxf", version = "=0.25.1" }
camel-master = { path = "crates/components/camel-master", version = "=0.25.1" }
camel-component-prometheus = { path = "crates/services/camel-prometheus", version = "=0.25.1" }
camel-component-otel = { path = "crates/services/camel-otel", version = "=0.25.1" }
camel-otel = { path = "crates/services/camel-otel", version = "=0.25.1" }
camel-prometheus = { path = "crates/services/camel-prometheus", version = "=0.25.1" }
camel-component-container = { path = "crates/components/camel-container", version = "=0.25.1" }
camel-language-api = { path = "crates/languages/camel-language-api", version = "=0.25.1" }
camel-language-js = { path = "crates/languages/camel-language-js", version = "=0.25.1" }
camel-language-rhai = { path = "crates/languages/camel-language-rhai", version = "=0.25.1" }
camel-language-minijinja = { path = "crates/languages/camel-language-minijinja", version = "=0.25.1" }
camel-language-simple = { path = "crates/languages/camel-language-simple", version = "=0.25.1" }
camel-language-jsonpath = { path = "crates/languages/camel-language-jsonpath", version = "=0.25.1" }
camel-language-xpath = { path = "crates/languages/camel-language-xpath", version = "=0.25.1" }
camel-config = { path = "crates/camel-config", version = "=0.25.1" }
camel-platform-kubernetes = { path = "crates/platforms/camel-platform-kubernetes", version = "=0.25.1" }
camel-proto-compiler = { path = "crates/services/camel-proto-compiler", version = "=0.25.1" }
camel-dataformat-protobuf = { path = "crates/dataformats/camel-dataformat-protobuf", version = "=0.25.1" }
camel-component-grpc = { path = "crates/components/camel-component-grpc", version = "=0.25.1" }
camel-component-opensearch = { path = "crates/components/camel-opensearch", version = "=0.25.1" }
camel-wit = { path = "crates/camel-wit", version = "=0.25.1" }
camel-component-wasm = { path = "crates/components/camel-component-wasm", version = "=0.25.1" }
camel-component-llm = { path = "crates/components/camel-component-llm", version = "=0.25.1" }
camel-component-exec = { path = "crates/components/camel-component-exec", version = "=0.25.1" }
camel-component-cron = { path = "crates/components/camel-cron", version = "=0.25.1" }
camel-component-surrealdb = { path = "crates/components/camel-component-surrealdb", version = "=0.25.1" }

tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = ["transport", "tls-native-roots"] }
prost = { version = "0.14" }
prost-reflect = { version = "0.16", features = ["serde"] }
tonic-build = { version = "0.14" }
tonic-prost-build = { version = "0.14" }
tonic-prost = { version = "0.14" }
protoc-bin-vendored = "3"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.7", features = ["fs"] }
async-trait = "0.1"
thiserror = "2"
surrealdb = { version = "3", default-features = false, features = ["protocol-ws", "protocol-http", "rustls"] }
anyhow = "1"
bytes = "1"
futures = "0.3"
futures-util = "0.3"
tracing = "0.1"
tokio-util = { version = "0.7", features = ["rt", "io"] }
tokio-stream = "0.1"
dashmap = "6"
indexmap = "2"
blake3 = "1"
bollard = "0.20"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = "4"
kube = { version = "4", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.28", features = ["v1_35"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
tracing-test = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["rustls", "stream"], default-features = false }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
wiremock = "0.6"
sha2 = "0.11"
hex = "0.4"
flate2 = "1"
tar = "0.4"
tempfile = "3"
zip = { version = "8", default-features = false, features = ["deflate"] }
async-stream = "0.3"
dirs = "6"
regex = "1"
redb = "4"
redis = "1"
rumqttc = { version = "0.33.2", package = "rumqttc-v4-next", default-features = false }
rustls = { version = "0.23", features = ["ring"] }
axum = { version = "0.8" }
http = "1"
url = "2"
libc = "0.2"
uuid = { version = "1", features = ["v4"] }
rhai = { version = "1", features = ["sync", "no_module"] }
# minijinja cargo features:
# - fuel: required for set_fuel() (S5 resource limit, see ADR-0047 §4).
# - json: enables {% autoescape "json" %} via AutoEscape::Json (spec §4 S7).
# - urlencode: enables the |urlencode filter (used by HTTP query templates).
minijinja = { version = "2", features = ["fuel", "json", "urlencode"] }
# Pin to 0.21: Context is !Send + !Sync
boa_engine = { version = "0.21", features = [] }
arc-swap = "1"
config = "0.15"
glob = "0.3"
notify = { version = "8", features = ["macos_fsevent"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["kafka", "postgres", "redis"] }
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
csv = "1"
proc-macro2 = "1.0"
prometheus = "0.14"
quick-xml = "0.41"
quote = "1.0"
base64 = "0.22"
pkcs1 = { version = "0.7", features = ["pem"] }
pkcs8 = { version = "0.10", features = ["pem"] }
serde_urlencoded = "0.7"
zeroize = "1"
rand = "0.10"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
sqlx = "0.8"
sxd-document = "0.3"
syn = "2.0"
jsonschema = { version = "0.46", default-features = false, features = ["resolve-file"] }
noyalib = { version = "0.0.8", features = ["compat-serde-yaml"] }
toml = "1"
percent-encoding = "2.3"
schemars = "1"
ts-rs = "12"

# WASM dependencies
wit-bindgen = "0.58"
wasmtime = { version = "46.0.1", features = ["component-model", "component-model-async"] }
wasmtime-wasi = "46.0.1"

# OpenTelemetry dependencies
opentelemetry = { version = "0.32", features = ["trace", "logs", "metrics"] }
opentelemetry_sdk = { version = "0.32", features = ["trace", "logs", "metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "http-proto", "trace", "logs", "metrics"] }
opentelemetry-semantic-conventions = { version = "0.32", features = ["semconv_experimental"] }
opentelemetry-appender-tracing = { version = "0.32" }
tracing-opentelemetry = { version = "0.33", features = [] }

[profile.dev]
debug = 1
split-debuginfo = "packed"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

[workspace.lints.rust]
unused_must_use = "warn"
unused_imports  = "warn"
dead_code       = "warn"

[workspace.lints.clippy]
all = "warn"
