[package]
name = "camel-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
camel-api.workspace = true
camel-dsl.workspace = true
serde.workspace = true
serde_json.workspace = true
