[package]
name = "camel-ai"
description = "Vendor-neutral AI traits and types for rust-camel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
camel-api.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
