[package]
name = "camel-ai"
description = "Vendor-neutral AI traits and types for rust-camel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
camel-api.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
qdrant-client = { workspace = true }
ollama-rs = { version = "0.3.4", default-features = false, features = ["rustls"] }
async-openai = { version = "0.38.0", features = ["chat-completion", "embedding"] }
