[package]
name = "camel-api"
description = "Core traits and interfaces for rust-camel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/camel-api"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
chrono = { workspace = true }
futures = { workspace = true }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tower = { workspace = true, features = ["util"] }
uuid = { workspace = true }
opentelemetry = { workspace = true }
quick-xml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
