[package]
name = "camel-bean-macros"
description = "Proc-macros for camel-bean crate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/camel-bean-macros"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "parsing", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
# serde_json is used directly in generated code for body serialization/deserialization.
# BEAN-MACROS-006: This is an intentional, explicit dependency — not hidden.
serde_json = { workspace = true }

[lints]
workspace = true
