[package]
name = "camel-bean"
description = "Beans/Registry system for rust-camel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/camel-bean"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
camel-api = { path = "../camel-api" }
camel-bean-macros = { path = "../camel-bean-macros" }
async-trait.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
