[package]
name = "camel-bench"
description = "Integration benchmarks for rust-camel"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
camel-api.workspace = true
camel-processor.workspace = true
camel-core.workspace = true
tokio.workspace = true
tower.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "exchange_flow"
harness = false

[[bench]]
name = "body_coercion"
harness = false
