[package]
name = "camel-builder"
description = "Fluent route builder API for rust-camel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
camel-api.workspace = true
camel-core.workspace = true
camel-processor.workspace = true
camel-component.workspace = true
camel-endpoint.workspace = true
tower.workspace = true

[dev-dependencies]
tokio.workspace = true
camel-component-timer.workspace = true
camel-component-direct.workspace = true
camel-component-mock.workspace = true
