[package]
name = "camel-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for Apache Camel in Rust"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/camel-cli"
readme = "README.md"
keywords = ["camel", "cli", "integration", "messaging"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "camel"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
serde_json.workspace = true
camel-core.workspace = true
camel-api.workspace = true
camel-dsl.workspace = true
camel-config = { workspace = true, features = ["http", "file", "ws"] }
config.workspace = true
camel-component-timer.workspace = true
camel-component-log.workspace = true
camel-component-direct.workspace = true
camel-component-file.workspace = true
camel-component-http.workspace = true
camel-component-mock.workspace = true
camel-component-controlbus.workspace = true
camel-component-ws.workspace = true
camel-component-container = { workspace = true, optional = true }
camel-component-redis = { workspace = true, optional = true }
camel-component-kafka = { workspace = true, optional = true }
camel-component-sql = { workspace = true, optional = true }
camel-component-jms = { workspace = true, optional = true }
camel-language-js = { workspace = true, optional = true }
camel-language-rhai = { workspace = true, optional = true }
camel-language-jsonpath = { workspace = true, optional = true }
camel-language-xpath = { workspace = true, optional = true }
[dev-dependencies]
tempfile = "3"
serde_json.workspace = true

[features]
default = ["container", "redis", "sql", "jms", "lang-js", "lang-rhai", "lang-jsonpath", "lang-xpath"]
container = ["dep:camel-component-container", "camel-config/container"]
redis = ["dep:camel-component-redis", "camel-config/redis"]
kafka = ["dep:camel-component-kafka", "dynamic-linking", "camel-config/kafka"]
sql = ["dep:camel-component-sql", "camel-config/sql"]
jms = ["dep:camel-component-jms", "camel-config/jms"]
lang-js = ["camel-core/lang-js", "dep:camel-language-js"]
lang-rhai = ["camel-core/lang-rhai", "dep:camel-language-rhai"]
lang-jsonpath = ["camel-core/lang-jsonpath", "dep:camel-language-jsonpath"]
lang-xpath = ["camel-core/lang-xpath", "dep:camel-language-xpath"]
cmake-build = ["camel-component-kafka/cmake-build"]
dynamic-linking = ["camel-component-kafka/dynamic-linking"]
all-components = ["container", "redis", "kafka", "sql", "jms"]
